# Polymarket-Conditional-Arbitrage

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
data/: calibration_table.json  empirical_residuals.json  sigma_cache.json
polymarket_conditional_arb/: __init__.py  arb_models.py  arb_strategy.py  config.py  event_log.py  fetcher.py  latency.py  market_data.py  market_universe_cache.py  network.py  order_book.py  paper.py  portfolio_lock.py  runtime_status.py  scan_bot.py
tests/: test_arb_strategy.py  test_artifacts.py  test_binary_strategy.py  test_config.py  test_daily_report.py  test_dashboard.py  test_event_log.py  test_fetcher.py  test_forecast_cache.py  test_latency.py  test_ledger.py  test_live_bot.py  test_live_fetcher.py  test_market_data.py  test_market_parser.py  test_market_universe_cache.py  test_merge_arb_bot.py  test_models.py  test_neg_risk_strategy.py  test_order_book.py  test_order_placer.py  test_paper.py  test_paper_portfolio.py  test_reconciliation.py  test_scan_bot.py  test_strategy.py  test_wallet_balance.py  test_ws_stream.py
weather_arb_live/: __init__.py  arb_models.py  arb_strategy.py  calibration.py  config.py  daily_report.py  dashboard.py  dashboard_ui.py  empirical_model.py  event_log.py  forecast.py  ledger.py  live_bot.py  live_fetcher.py  market_parser.py  merge_arb_bot.py  network.py  order_book.py  order_placer.py  paper.py  reconciliation.py  sigma_model.py  strategy.py  wallet_balance.py  ws_stream.py
