[project]
name = "polymarket-conditional-arbitrage"
version = "0.1.0"
description = "Paper-only Polymarket conditional arbitrage portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "scipy>=1.11.0",
  "websockets>=14.0",
]

[project.scripts]
poly-cond-arb = "polymarket_conditional_arb.scan_bot:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["polymarket_conditional_arb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
